# researches

./: .gitignore  .gitmodules  Jupyter_Lab.command  README.md  pyproject.toml
nasco_drive_speed/: scan_speed_radec.ipynb  tracking_speed.ipynb
solar_moon_scan/: moon_scan_simulate.ipynb  sun_scan_simulate.ipynb
