[tool.poetry]
name = "researches"
version = "0.1.0"
description = ""
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.2"
astropy = "^4.1"
numpy = "^1.19.4"
xarray = "^0.16.1"
n_const = "^0.1.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^2.3.2"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
m2r2 = "^0.2.7"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
