[tool.poetry]
name = "researches"
version = "0.1.0"
description = ""
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"
astropy = "^5"
numpy = "^1.22"
xarray = ">22"
n_const = "^1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^2.2.9"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
m2r2 = "^0.2.7"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
